Resolve Sonarcloud issues and Jeremy's comments